--- a/src/main.css
+++ b/src/main.css
@@ -2,10 +2,6 @@
     box-sizing: border-box;
 }
 
-.nav-bar {
-
-}
-
 .nav-list {
   list-style-type: none;
   margin: 0;
@@ -52,9 +48,27 @@ body {
   max-width: 1200px
 }
 
+.portfolio-image {
+  width: 100%;
+  height:100%;
+  overflow: hidden;
+}
+
 .foot {
   background-color: black;
   color: white;
+}
+
+.contact-link {
+  color: pink;
+}
+
+.contact-link:visited {
+  color: pink;
+}
+
+.contact-link:hover {
+  color: orange;
 }
 
 /*
