--- a/src/css/main.css
+++ b/src/css/main.css
@@ -32,6 +32,9 @@ Styling for the navbar, this is also effected in a media query later in the page
   text-decoration: none;
   transition: 0.3s;
   font-size: 1.3rem;
+  user-select: none;
+  cursor: pointer;
+
 }
 
 .nav-list-link:hover {
@@ -43,6 +46,7 @@ Styling for the navbar, this is also effected in a media query later in the page
   display:none;
   transition: 0.3s;
   cursor: pointer;
+  user-select: none;
 }
 
 /*
