--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,8 +7,16 @@ h1 {
   background-color: black;
   color: white;
   margin: 0;
-  padding: 0;
+  padding: 0 0 7px 0;
   font-size: 3rem;
+}
+
+a {
+  color: black;
+}
+
+a:visited {
+  color: black;
 }
 
 /*
