--- a/src/css/main.css
+++ b/src/css/main.css
@@ -125,6 +125,8 @@ Media queries to show and hide navbar/burger icon
   .nav-list.clicked .nav-item {
     float:none;
     display: inline;
+    z-index: 100;
+
   }
 
   .nav-list.clicked .nav-item .nav-list-link {
