--- a/src/css/blog.css
+++ b/src/css/blog.css
@@ -1,8 +1,3 @@
-.blog-image {
-  width: 100%;
-  max-width: 760px
-}
-
 .blog-post {
   margin: 10px auto;
   border-bottom: solid black 5px;
@@ -27,4 +22,10 @@
   margin: 30px auto;
   max-width: 760px;
   text-align: center;
+}
+
+.blog-image {
+  width: 100%;
+  max-width: 760px;
+  margin: auto;
 }
